RESOLVED FIXED194006
AX: Role=switch not returning correct accessibilityValue
https://bugs.webkit.org/show_bug.cgi?id=194006
Summary AX: Role=switch not returning correct accessibilityValue
chris fleizach
Reported 2019-01-29 21:57:19 PST
role=switch doesn't return right value with aria-checked https://jsbin.com/tiviholiwu/edit?html,output <rdar://problem/47657488>
Attachments
patch (4.13 KB, patch)
2019-01-29 23:48 PST, chris fleizach
no flags
chris fleizach
Comment 1 2019-01-29 23:48:50 PST
WebKit Commit Bot
Comment 2 2019-01-30 07:07:10 PST
Comment on attachment 360560 [details] patch Clearing flags on attachment: 360560 Committed r240709: <https://trac.webkit.org/changeset/240709>
WebKit Commit Bot
Comment 3 2019-01-30 07:07:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.